compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@variant_param_empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            enum Foo {\n                Bar()\n            }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        18..21,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                40..43,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            40..45,
                        ),
                    },
                ],
                location: Location(
                    13..59,
                ),
            },
        ),
    ),
]
