compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@variant_param_multiple.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            enum Foo {\n                Bar(int, int)\n            }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        18..21,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                40..43,
                            ),
                        },
                        parameters: [
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        44..47,
                                    ),
                                },
                            ),
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        49..52,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            40..53,
                        ),
                    },
                ],
                location: Location(
                    13..67,
                ),
            },
        ),
    ),
]
