compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@variant_param_single.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            enum Foo {\n                Bar(int)\n            }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        18..21,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                40..43,
                            ),
                        },
                        parameters: [
                            Scalar(
                                ScalarType {
                                    name: "int",
                                    location: Location(
                                        44..47,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            40..48,
                        ),
                        documentation: None,
                    },
                ],
                location: Location(
                    13..62,
                ),
                documentation: None,
            },
        ),
    ),
]
