compiler/lume_parser/src/snapshots/lume_parser__parser__tests__function_definition_snapshots@no_return_type.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"fn main() {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<temp>",
        content: "fn main() {}",
    },
    range: 10..11,
    expected: ->,
    actual: {,
}
